--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ GNU Affero General Public License for more details.
 		flex-direction: column;
 		gap: .8em;
 		background: #444b5d;
-		border-radius: 0;
+		border-radius: 4px;
 		padding: .8em;
 		max-width: 40rem;
 		margin-top: auto;
